--- a/Chap4_Expressions.ipynb
+++ b/Chap4_Expressions.ipynb
@@ -2695,6 +2695,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Operands of Unsigned Type"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
