--- a/Chap3_Strings_Vectors_and_Arrays.ipynb
+++ b/Chap3_Strings_Vectors_and_Arrays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "b6118363",
    "metadata": {},
    "outputs": [],
@@ -3485,8 +3485,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dc4c9ea4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4.89505e-4152"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3.14L + 'a'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0f6828f0-2f22-4782-a601-2f4ba40289c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "char cval = 'a' + 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "04764df9-b559-4fe2-9ab8-e1797fbdd4f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "61351f0f-d9fc-42f1-96a1-c5e05996a2e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Other Implicit Conversions\n",
+    "\n",
+    "int ia[10];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2cbc99d1-804e-41c1-a480-1fcdad383465",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int * ip = ia;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4e3bd55f-7734-4991-88bd-8d0a8af509a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int i;\n",
+    "const int &j = i;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "06ba4da8-18b7-418a-9095-8b61599c30a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const int *p = &i;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2bc9ad41-2563-4a89-a690-79cdac6c90f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "@0x7ffe35209f28"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d166821c-2b44-4d86-a863-e7f38783bf55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_28:2:7: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mbinding reference of type 'int' to value of type 'const int' drops 'const' qualifier\u001b[0m\n",
+      " int &r = j;\n",
+      "\u001b[0;1;32m      ^   ~\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "int &r = j;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "06845135-0bc4-45a3-a5fe-bca86c622a46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int i=6,j=7;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a85895ac-fcaa-4378-9bcc-abbd84a66b0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "double slope  = i/j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1d3420af-ecad-4570-bf23-82a78eefd2e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slope"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8704e5e-8a11-4964-b383-62d45a5f1b9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "388ff67f-74f9-47af-9af4-bde6590a8b01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Named Casts\n",
+    "\n",
+    "//A named cst has the following form:\n",
+    "cast-name<type>(expression);\n",
+    "//Where type is the target type of the conversion and expression isthe value to be cast\n",
+    "//If type is a reference then the result is an lvalue. The cast name may be one of static_cast, dynamic_cast, const_cast, and reinterpret_cast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c1830227-c5ac-4a40-9de7-7bf16b6d585b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//ANy well defined type conversion other than those involving low level const can be requested using a static_cast For example we can force our expression to use floating point division by casting \n",
+    "//one of the operands to double."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "61881c54-2a1b-4b7b-a060-b68ea6040417",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "double slope = static_cast<double>(j)/i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "af041d84-4e48-4149-9ce6-dabd1a387f96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1666667"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slope"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1cc76a4-ca95-422f-ba52-56852a3ec9d6",
    "metadata": {},
    "outputs": [],
    "source": []
