--- a/Chap5_Statements.ipynb
+++ b/Chap5_Statements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "90f17801-03ab-43bf-95fa-bc00de26dca8",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a70c642b-f0ad-4024-a06f-3376c38dcbb0",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "2337abd5-af82-4cb9-956d-2a7e79443ef5",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "0x5 <invalid memory address>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "da6c432f-c902-4297-ad8a-fe264efbe2a8",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "ffcd487d-17eb-40ec-ba0c-066b78e017a8",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ce60e60a-491e-403f-8af4-c05fc86a62ac",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d417af8c-cb6d-4282-91b5-3c4347882304",
    "metadata": {},
    "outputs": [],
@@ -104,38 +104,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "d60b94fa-519e-4d84-8497-9a16f862f332",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1minput_line_24:3:18: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno matching constructor for initialization of 'string::iterator' (aka '__normal_iterator<char *, std::__cxx11::basic_string<char> >')\u001b[0m\n",
-      "string::iterator iter\n",
-      "\u001b[0;1;32m                 ^\n",
-      "\u001b[0m\u001b[1m/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_iterator.h:1079:2: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate constructor template not viable: requires single argument '__i', but no arguments were provided\u001b[0m\n",
-      "        __normal_iterator(const __normal_iterator<_Iter, _Container>& __i)\n",
-      "\u001b[0;1;32m        ^\n",
-      "\u001b[0m\u001b[1m/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_iterator.h:1072:7: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate constructor not viable: requires single argument '__i', but no arguments were provided\u001b[0m\n",
-      "      __normal_iterator(const _Iterator& __i) _GLIBCXX_NOEXCEPT\n",
-      "\u001b[0;1;32m      ^\n",
-      "\u001b[0m\u001b[1m/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_iterator.h:1043:11: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided\u001b[0m\n",
-      "    class __normal_iterator\n",
-      "\u001b[0;1;32m          ^\n",
-      "\u001b[0m\u001b[1m/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_iterator.h:1043:11: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided\u001b[0m\n"
-     ]
-    },
-    {
-     "ename": "Interpreter Error",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "Interpreter Error: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "string v = \"hello world\";\n",
     "\n",
@@ -143,9 +115,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8e9febf-aedd-41a6-981c-f7eb973165cc",
+   "metadata": {},
+   "source": [
+    "Conditional Statements\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4cc16522-7fc9-4140-8b7e-fc951a4ed030",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const vector<string> scores = {\"F\", \"D\", \"C\", \"B\", \"A\", \"A++\"};\n",
+    "vector<int> grades = {};"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "256aef61-d99e-43cf-8cec-c149bca10228",
+   "id": "563f2e10-93f4-4291-abd7-f653a0bd61d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string lettergrade;\n",
+    "if (grade < 60)\n",
+    "    lettergrade = scores[0];\n",
+    "else\n",
+    "    lettergrade = scores[(grade - 50)/10];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f4cbe36-ee7a-495b-93de-bc693ac9fab6",
    "metadata": {},
    "outputs": [],
    "source": []
