--- a/Chap5_Statements.ipynb
+++ b/Chap5_Statements.ipynb
@@ -149,9 +149,190 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d10bf7fe-7ff2-4db1-940d-e785a1aa0504",
+   "metadata": {},
+   "source": [
+    "The switch statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bff66ff6-3819-4581-af16-1865175366fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//A switch statement provides  aconvenient way of selecting among a possibly large number of fixed alternatives\n",
+    "//as one example suppose that we want to count how often each of the five vowels appears\n",
+    "//in some segment of text.\n",
+    "//out program logic is as follows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "626fa0e3-ea15-49fe-9cf5-6a75fca51272",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unsigned aCnt = 0, eCnt = 0, iCnt = 0, oCnt = 0, uCnt = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6b3e1b5d-caac-409b-ac4f-31e8a79e45de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m<<< cling interactive line includer >>>:1:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected '}'\u001b[0m\n",
+      "\u001b[1minput_line_16:1:42: \u001b[0m\u001b[0;1;30mnote: \u001b[0mto match this '{'\u001b[0m\n",
+      "void __cling_Un1Qu36(void* vpClingValue) {\n",
+      "\u001b[0;1;32m                                         ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "char ch;\n",
+    "while(cin>>ch){\n",
+    "    //if ch is a vowel increment the ppropriate counter\n",
+    "    switch(ch){\n",
+    "        case 'a':\n",
+    "            ++aCnt;\n",
+    "            break;\n",
+    "        case 'e':\n",
+    "            ++eCnt;\n",
+    "            break;\n",
+    "        case 'i':\n",
+    "            ++iCnt;\n",
+    "            break;\n",
+    "        case 'o':\n",
+    "            ++oCnt;\n",
+    "            break;\n",
+    "        case 'u':\n",
+    "            ++uCnt;\n",
+    "            break;\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "efbdce19-75f0-43ae-b513-bc71d0cbb32c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_17:7:11: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'getVal'\u001b[0m\n",
+      "char ch = getVal()\n",
+      "\u001b[0;1;32m          ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "//If the expression matches the value of a case label executin begins with the first\n",
+    "//statement following that label. Execution continues normally from that statement\n",
+    "//through the end of the swtich or until a break statement.\n",
+    "\n",
+    "//If no match is found, execution falls through to the first staement following the swtich.\n",
+    "//As we already know in this example, exiting the switch returns control to the condition in the while.\n",
+    "\n",
+    "char ch = getVal()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f4cbe36-ee7a-495b-93de-bc693ac9fab6",
+   "id": "94d8a641-73eb-4e1e-80e6-a022d17116a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Control Flow within a switch\n",
+    "\n",
+    "unsigned vowelCnt = 0;\n",
+    "switch (ch)\n",
+    "{\n",
+    "    case 'a':\n",
+    "    case 'a':\n",
+    "    case 'i':\n",
+    "        ...\n",
+    "    ++vowelCnt;\n",
+    "        break;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2889d08-7343-47d4-8614-87e80254ee98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Alternative syntax\n",
+    "switch (ch)\n",
+    "{\n",
+    "// alternative legal syntax\n",
+    "case ’a’: case ’e’: case ’i’: case ’o’: case ’u’:\n",
+    "++vowelCnt;\n",
+    "break;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f3dc980-5cbf-4b33-a52d-5b4812b3e651",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// if ch is a vowel, increment the appropriate counter\n",
+    "switch (ch) {\n",
+    "case ’a’: case ’e’: case ’i’: case ’o’: case ’u’:\n",
+    "++vowelCnt;\n",
+    "break;\n",
+    "default:\n",
+    "++otherCnt;\n",
+    "break;\n",
+    "}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a05b7761-0b23-49f1-9bc8-dfa28b81582e",
+   "metadata": {},
+   "source": [
+    "Variable Definitions inside the Body of a switch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22bfdd79-4334-44b7-832c-52d622e7bdb8",
    "metadata": {},
    "outputs": [],
    "source": []
