--- a/Chap5_Statements.ipynb
+++ b/Chap5_Statements.ipynb
@@ -330,10 +330,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "94d6f8bb-950a-4742-86de-04ad84829f65",
+   "metadata": {},
+   "source": [
+    "Iterative Statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b89ff65d-5d05-4619-83ef-5cd66646ef4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Iterative statements, commonly called loops provide for repeated execution until \n",
+    "//a condition is true. the while and for statements test the condition before\n",
+    "//executing the body. the do while executes the body and then tests its condition."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85481b18-45f3-411b-b60e-70930de45cd9",
+   "metadata": {},
+   "source": [
+    "The while statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a6c8ced6-7d62-4952-badd-890d6f25d6d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//A while statement repeatedly executes a target statement as long as a condition is true\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a595b3b3-2a9f-42a3-ba91-cd657ebae1fa",
+   "metadata": {},
+   "source": [
+    "The While Loop\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9beabcd9",
+   "metadata": {},
+   "source": [
+    "Traditional for statement"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22bfdd79-4334-44b7-832c-52d622e7bdb8",
-   "metadata": {},
+   "id": "3c5e5d86",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "expression must represent a sequence, such as a braced initializer list,\n",
+    "an array or an object of a type such as ector or string that has begin and end memebers that return iterators.\n",
+    "\n",
+    "declaration defines a variable. It must be possible to convert each element of the sequence to the variable's type. The easiest way to ensure that the types match is to use the auto type specifier. That way the compiler will deduce the type for us. If we want to write to the elements in the sequence, the loop variable must be a reference type.\n",
+    "\n",
+    "On each iteration, the control variable is defined an initialized by the next value in the sequence, after which statement is execure. As usual , statment can be a single statement or a block. Execution ends once all the elements have been processed.\n",
+    "\n",
+    "We have already seen several such loops, but for completeness, here is one that doubles the value of each element in a vector:\n",
+    "\n",
+    "\n",
+    "vector<int> v = {1,2,3,4,5,6,7,8,9}\n",
+    "//the variable must be a  reference so we can write tot hte lements\n",
+    "\n",
+    "for (auto &r : v) // for each element in v\n",
+    "    r *= 2; //double the value of each element  in value\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ab14770",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
    "outputs": [],
    "source": []
   }
