--- a/Chap5_Statements.ipynb
+++ b/Chap5_Statements.ipynb
@@ -369,7 +369,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a595b3b3-2a9f-42a3-ba91-cd657ebae1fa",
    "metadata": {},
@@ -378,7 +377,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9beabcd9",
    "metadata": {},
@@ -417,13 +415,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2ab14770",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
+   "outputs": [],
+   "source": [
+    "vector <int> v = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9};\n",
+    "//range variable must be a reference so we can write to the elements\n",
+    "\n",
+    "for (auto &r : v)\n",
+    "    r *= 2;\n",
+    "//Imp : Because we want to change the value of the lements in v, we declar3e r as a reference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bbf31198-cbaa-4613-8aee-f7971e748c1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ 0, 2, 4, 6, 8, 10, 12, 14, 16, 18 }"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "39492f34-63e4-4f33-b770-6c16346b477b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_8:2:2: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno template named 'vector'; did you mean 'std::vector'?\u001b[0m\n",
+      " vector<int> v = {0,1,2,3,4,5,6,7,8};\n",
+      "\u001b[0;1;32m ^~~~~~\n",
+      "\u001b[0m\u001b[0;32m std::vector\n",
+      "\u001b[0m\u001b[1m/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_vector.h:423:11: \u001b[0m\u001b[0;1;30mnote: \u001b[0m'std::vector' declared here\u001b[0m\n",
+      "    class vector : protected _Vector_base<_Tp, _Alloc>\n",
+      "\u001b[0;1;32m          ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "vector<int> v = {0,1,2,3,4,5,6,7,8};\n",
+    "for (auto beg = v.begin(), end = v.end(); beg != end; ++beg)\n",
+    "{\n",
+    "    auto &r = *beg; // rmust be a reference so we can change the element\n",
+    "    r *= 2;      // djouble the value of each element in v\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23c4256a-bee6-4360-a901-9e062a689498",
+   "metadata": {},
+   "source": [
+    "The do while statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e92d8fb5-e03b-4c62-82f9-80a443e06d2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//A do while statement is like a while but the condition is tested after the staement body completes\n",
+    "//Regardless of the value of the condition, we execute the loop at least once.\n",
+    "//The syntactic form is as follows\n",
+    "\n",
+    "do\n",
+    "    ......\n",
+    "while (condition)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d7935de-8324-4810-bb4a-8d320ef95033",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
