--- a/Chap5_Statements.ipynb
+++ b/Chap5_Statements.ipynb
@@ -516,9 +516,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40fb62ae-2077-4720-b0c9-b8f2c8a44ca1",
+   "metadata": {},
+   "source": [
+    "The break statement \n",
+    "\n",
+    "str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "96b22d88-5fa1-4e45-9e4e-1e998bdde7ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " -uffer\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-uffer"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " +buffer\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " nein\n"
+     ]
+    }
+   ],
+   "source": [
+    "string buf;\n",
+    "while (cin>> buf && buf[0] != 'n')\n",
+    "{\n",
+    "    switch (buf[0])\n",
+    "    {\n",
+    "        case '-':\n",
+    "            //process to fill the first blank\n",
+    "            for (auto it = buf.begin() + 1; it != buf.end(); ++it)\n",
+    "            {\n",
+    "                if (*it == ' ')\n",
+    "                    break;\n",
+    "            }\n",
+    "            cout<<buf;\n",
+    "            //break\n",
+    "            //remaining\n",
+    "            break; // leaves the switch statement\n",
+    "        case '+':\n",
+    "            cout<<\"Hello world\";\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d7935de-8324-4810-bb4a-8d320ef95033",
+   "id": "f783d5d6-136d-434e-bab2-c872e0197229",
    "metadata": {},
    "outputs": [],
    "source": []
