--- a/Chap5_Statements.ipynb
+++ b/Chap5_Statements.ipynb
@@ -591,9 +591,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "24fb459f-d8d3-41b5-b22d-367b1d11baf6",
+   "metadata": {},
+   "source": [
+    "The goto Statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "97c121fa-9d80-4be3-bec6-07457cb7f450",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//A goto statement provides an unconditional jump from the goto to an another statement in the same funciton."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d6aee8a4-f5ae-40d9-94a3-18c5a6428a5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//A labeled statement is any statement that is preceded by an identitfier followed by a colon:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0ba4fce-a8fa-4c75-80fb-7f538ed06a1e",
+   "metadata": {},
+   "source": [
+    "try Blocks and Exception Handling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5e59642-d1a1-465f-970a-1c0199bcdc07",
+   "metadata": {},
+   "source": [
+    "A throw Expression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f783d5d6-136d-434e-bab2-c872e0197229",
+   "id": "d00d86a2-a36a-4d19-ad3f-ea997763f97f",
    "metadata": {},
    "outputs": [],
    "source": []
