--- a/Chap7_Classes.ipynb
+++ b/Chap7_Classes.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,30 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "input_line_17:5:17: error: 'm' is a private member of '__cling_N52::X'\n",
-      "    int z = var.m;\n",
-      "                ^\n",
-      "input_line_9:3:13: note: declared private here\n",
-      "        int m;\n",
-      "            ^\n"
-     ]
-    },
-    {
-     "ename": "Interpreter Error",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "Interpreter Error: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int user(X var, X* ptr)\n",
     "{\n",
@@ -116,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +213,294 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "//The init() function is now essential because making "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Date dx;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//dx.m = 3\n",
+    "dx.init(24,4,2023);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//redefine Sales_data\n",
+    "\n",
+    "struct Sales_data {\n",
+    "    //new members: operations on Sales_data\n",
+    "    std::string isbn() const {return bookNo;}\n",
+    "    Sales_data& combine(const Sales_data&)\n",
+    "    double avg_price() const;\n",
+    "\n",
+    "    //data members are unchanged\n",
+    "    std::string bookNo;\n",
+    "    unsigned units_sold = 0;\n",
+    "    double revenue = 0.0;\n",
+    "};\n",
+    "\n",
+    "// nonmember Sales_data interface functions\n",
+    "\n",
+    "Sales_data add(const Sales_data&, const Sales_data&);\n",
+    "std::ostream &print(std::ostream&, const Sales_data&)\n",
+    "std::istream &read(std::istream&, Sales_data&)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Ex..7.4+7.5\n",
+    "\n",
+    "class Persona\n",
+    "{\n",
+    "    private:\n",
+    "        string name,address;\n",
+    "    public:\n",
+    "        void init(const string& n, const string& a){name=n;address=a;};\n",
+    "        const string& fullname() {return name;};\n",
+    "        const string& location() {return address;};\n",
+    "\n",
+    "}\n",
+    "Persona person_a;\n",
+    "person_a.init(\"arka\",\"kolkata\")\n",
+    "person_a.fullname()\n",
+    "person_a.location()\n",
+    "\n",
+    "//Done"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining Nonmemeber Class-Related Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Ex7.6-7.7\n",
+    "\n",
+    "class Persona\n",
+    "{\n",
+    "    private:\n",
+    "        string name,address;\n",
+    "    public:\n",
+    "        //void init(const string& n, const string& a){name=n;address=a;};\n",
+    "        const string& fullname() {return name;};\n",
+    "        const string& location() {return address;};\n",
+    "        int add(){return 0;};\n",
+    "        istream& read(istream& is, Persona& person){is>>person.name>>person.address;return is;};\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Persona person_a;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person_a.read()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Constructors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//The use of functions such as inti() to provide initialization for class objects is inelegant and error-prone. Because it is nowhere stated that an object must be initialized, a programmmer can forget to do so or do so twice\n",
+    "\n",
+    "//A better approach is to allow the programme to declare a function with the explicit purpose of initializing objects. Because such a function constructs values of a given type is called a constructor\n",
+    "\n",
+    "\n",
+    "class Date{\n",
+    "    int d,m,y;\n",
+    "public:\n",
+    "    Date(int dd, int mm, int yy);\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Date today = Date(12,3,2022)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Using default arguments to reduce the number of related functions\n",
+    "\n",
+    "class Date{\n",
+    "    int d,m,y;\n",
+    "public:\n",
+    "    Date(int dd = 0, int mm = 0, int yy = 0);\n",
+    "\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Date today{4}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Date::Date(int dd,int mm, int yy)\n",
+    "{\n",
+    "    d = dd ? dd:today.d;\n",
+    "    m = mm ? mm:today.m;\n",
+    "    y = yy ? yy:today.y;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Alternatively, we could use the default values directly as default arguments:\n",
+    "class Date {\n",
+    "    int d, m, y;\n",
+    "public:\n",
+    "    Date(int dd =today.d, int mm =today.m, int yy =today.y);\n",
+    "};"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "explicit Constructors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complex<double> d{1};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "//We can also define implicit or explicit constructors\n",
+    "\n",
+    "\n",
+    "class Date{\n",
+    "    int d, m, y;\n",
+    "public:\n",
+    "    explicit Date(int dd = 0, int mm = 0, int yy = 0);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Date d1{15};  //explicit declaration\n",
+    "\n",
+    "Date d2 = 15;  //implicit not supported\n",
+    "\n",
+    "Date d3  = {15}; //implicit not supported\n",
+    "\n",
+    "Date d4 = 15; //again implicit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//always recommended to use explicit constructor\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
