--- a/Chap7_Classes.ipynb
+++ b/Chap7_Classes.ipynb
@@ -11,7 +11,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "#include <iostream>\n",
@@ -22,7 +26,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//256"
@@ -31,7 +39,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//A class is a user-defined type.\n",
@@ -44,7 +56,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "class X{\n",
@@ -65,7 +81,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "X var{7} //a variable of type X, initialized to 7"
@@ -74,7 +94,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "int user(X var, X* ptr)\n",
@@ -96,7 +120,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//struct is a class where all the members are public\n",
@@ -115,7 +143,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "Date my_birthday;\n"
@@ -124,7 +156,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "void f()\n",
@@ -141,7 +177,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//we must specify the structure name when defining a member function\n",
@@ -166,7 +206,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "class Date\n",
@@ -184,7 +228,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//member functions can access the variables \n",
@@ -197,7 +245,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//But Non Member functions cannot\n",
@@ -211,7 +263,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//The init() function is now essential because making "
@@ -220,7 +276,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "Date dx;"
@@ -229,7 +289,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//dx.m = 3\n",
@@ -239,7 +303,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//redefine Sales_data\n",
@@ -266,7 +334,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//Ex..7.4+7.5\n",
@@ -300,7 +372,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "// Ex7.6-7.7\n",
@@ -322,7 +398,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "Persona person_a;"
@@ -331,7 +411,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "person_a.read()"
@@ -348,7 +432,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//The use of functions such as inti() to provide initialization for class objects is inelegant and error-prone. Because it is nowhere stated that an object must be initialized, a programmmer can forget to do so or do so twice\n",
@@ -366,7 +454,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "Date today = Date(12,3,2022)"
@@ -375,7 +467,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "today"
@@ -384,7 +480,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//Using default arguments to reduce the number of related functions\n",
@@ -400,7 +500,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "Date today{4}"
@@ -409,7 +513,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "Date::Date(int dd,int mm, int yy)\n",
@@ -423,7 +531,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//Alternatively, we could use the default values directly as default arguments:\n",
@@ -445,7 +557,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "complex<double> d{1};"
@@ -454,7 +570,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "d"
@@ -463,7 +583,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -480,7 +604,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "Date d1{15};  //explicit declaration\n",
@@ -495,26 +623,265 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//always recommended to use explicit constructor\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In-Class Initializers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cuda-cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#include <iostream>\n",
+    "#include <vector>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cuda-cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//Default arguments during class declaration\n",
+    "\n",
+    "class Date {\n",
+    "    int d {today.d};\n",
+    "    int m {today.m};\n",
+    "    int y {today.y};\n",
+    "public:\n",
+    "    Date(int, int, int);\n",
+    "    Date(int, int);\n",
+    "    Date(int);\n",
+    "    Date(); //Default Date: today\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cuda-cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//Now, each constructor has the d, m, and y initialized unless it does it itself. For example:\n",
+    "Date::Date(int dd)\n",
+    "    :d{dd}\n",
+    "{\n",
+    "// check that the Date is valid\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In-Class Function Definitions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cuda-cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "inline  void Date::add_month(int n) // add n months\n",
+    "{\n",
+    "    m+=n;\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mutability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cuda-cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//Constant Member Functions\n",
+    "\n",
+    "//Individual functions for reading the day, month and year\n",
+    "\n",
+    "class Date{\n",
+    "    int d,m,y;\n",
+    "public:\n",
+    "    int day() const {return d;}\n",
+    "    int month() const {return m;}\n",
+    "    int year() const;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cuda-cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//The const after the (empty) argument list in the function declarations indicates that these functions do not modify the state of a Date\n",
+    "\n",
+    "int Date::year() const\n",
+    "{\n",
+    "    return ++y;\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cuda-cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//mutable\n",
+    "//We can define a member of a class to be mutable, meaning that it can be modified even in a const\n",
+    "\n",
+    "\n",
+    "class Date{\n",
+    "    public:\n",
+    "        //\n",
+    "        string string_rep() const;\n",
+    "    private:\n",
+    "        mutable bool cache_valid;\n",
+    "        mutable string cache;\n",
+    "        void compute_cache_value() const;\n",
+    "};\n",
+    "\n",
+    "\n",
+    "//Now we can define string_rep() in the same way\n",
+    "\n",
+    "\n",
+    "string Date::string_rep() const\n",
+    "{\n",
+    "    if (!cache_valid) {\n",
+    "        compute_cache_value();\n",
+    "        cache_valid = true;\n",
+    "    }\n",
+    "    return cache;\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Self-Reference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cuda-cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//The state update functions add_year(), add_month(), and add_day() (§16.2.3) were defined not to return values. For such a set of related update functions, it is often useful to return a reference to the updated object so that the operations can be chained. For example, we would like to write.\n",
+    "\n",
+    "void f(Date& d)\n",
+    "{\n",
+    "    d.add_day(1).add_month(1).add_year(1);\n",
+    "}\n",
+    "\n",
+    "class Date {\n",
+    "    //\n",
+    "    Date& add_year(int n);\n",
+    "    Date& add_month(int n);\n",
+    "    Date& add_day(int n); \n",
+    "};\n",
+    "\n",
+    "\n",
+    "Date& Date::add_year(int n)\n",
+    "{\n",
+    "    if (d=19&m==2&&!leapyear(y+n)){\n",
+    "        d = 1;\n",
+    "        m  = 3;\n",
+    "\n",
+    "    }\n",
+    "     y+=n;\n",
+    "     return *this;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cuda-cpp"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "C++11",
-   "language": "C++11",
-   "name": "xcpp11"
+   "display_name": "C++17",
+   "language": "C++17",
+   "name": "xcpp17"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
    "file_extension": ".cpp",
    "mimetype": "text/x-c++src",
-   "name": "c++",
-   "version": "11"
+   "name": "C++17",
+   "version": "17"
   },
   "orig_nbformat": 4
  },
